fixed spacing, borders, and alignment of bottom sections

--- a/css/main.css
+++ b/css/main.css
@@ -38,11 +38,11 @@ h3 {
 	font-size: 12px;
 }
 
-p {
+/**p {
 	font-size: 14px;
 	line-height: 21px;
     padding: 0 30px;
-}
+}**/
 
 /*The widths are in a percentage!*/
 header {
@@ -58,7 +58,6 @@ header {
 header h1 {
 	width: 100%;
 	border-bottom: 3px solid #77a466;
-	margin: 0;
 	justify-content: center;
 	align-items: center;
 }
@@ -68,7 +67,6 @@ header h1 span {
 
 header nav {
 	width: 100%;
-	padding: 46px 0;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -109,6 +107,7 @@ header nav ul li a{
 }
 .main-image img {
 	width: 100%;
+	border-top: 3px solid #77a466;
 	border-bottom: 3px solid #77a466;
 	justify-content: center;
 	align-items: center;
@@ -143,10 +142,11 @@ header nav ul li a{
 .section-one h3 {
 }
 
-.section-two {
+/**.section-two {
 	border-left: 1px solid #eee;
 	border-right: 1px solid #eee;
 }
+**/
 
 .section-two h3,
 .section-three h3 {
@@ -163,14 +163,14 @@ header nav ul li a{
 
 .reviews {
 	color: #333;
-	font-size: 16px;
-	line-height: 21px;
+	/**font-size: 16px;
+	line-height: 21px;**/
 }
 
-.address {
+/**.address {
 	font-size: 16px;
 	line-height: 24px;
-}
+}**/
 
 /*The widths are in a percentage!*/
 footer {
